--- a/styles/style.css
+++ b/styles/style.css
@@ -32,14 +32,12 @@ body{
 }
 .header__menu__link{
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--color-terciario);
     text-decoration: none;
 
 }
-
-
 
 .presentacion {
     padding: 5% 15%;
@@ -57,7 +55,7 @@ body{
 
 
 .presentacion__contenido__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fuente-krona);
 }
 
@@ -66,7 +64,7 @@ body{
 }
 
 .presentacion__contenido__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fuente-montserrat);
 }
 
@@ -81,7 +79,7 @@ body{
 .presentacion__enlaces__subtitulo{
     font-family: var(--fuente-krona);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 .presentacion__enlaces__link{
       display: flex;
@@ -91,7 +89,7 @@ body{
       width: 378px;
       text-align: center;
       border-radius: 8px;
-      font-size: 24px;
+      font-size: 1.5rem;
       font-weight: 600;
       padding: 21.5px 0;
       text-decoration: none;
@@ -109,6 +107,6 @@ body{
     padding: 24px;
     text-align: center;
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
