--- a/styles/style.css
+++ b/styles/style.css
@@ -44,10 +44,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .presentacion__contenido{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -86,7 +87,7 @@ body{
       justify-content: center;
       gap: 16px;
       border: 2px solid var(--color-terciario);
-      width: 378px;
+      width: 50%;
       text-align: center;
       border-radius: 8px;
       font-size: 1.5rem;
@@ -99,6 +100,10 @@ body{
 
 .presentacion__enlaces__link:hover{
     background-color: var(--color-hover);
+}
+
+.presentacion__imagen{
+    width: 50%;
 }
 
 .footer{
